# naiv4vibe_Explorer-intergrate

./: CMakeLists.txt  README.md
scripts/: build.ps1  install.ps1  uninstall.ps1
src/: Naiv4VibeThumbnailProvider.def  ThumbnailProvider.cpp  ThumbnailProvider.h  dllmain.cpp
